# MT3-pytorch

./: .gitignore  Prensentation_05_11.md  README.md  __init__.py  pyproject.toml
config/: T5config.py  data_config.py  eval_config.py  training_config.py
configs/: __init__.py  project_config.py
data/: __init__.py  audio_mixing.py  cached_maestro_loader.py  cached_slakh_loader.py  constants.py  dataset.py  dataset_utils.py  generate_chunk_manifest.py  gpu_spectrogram.py  lru_cache.py  maestro_loader.py  multi_dataset_cached.py  multitask_dataset.py  run_length_encoding.py  slakh_loader.py  spectrogram.py  training_utils.py  utils.py  vocabularies.py
data/audio/: __init__.py  augment.py  io.py  mixing.py  spectrogram.py
data/datasets/: __init__.py  chunk_dataset.py  collate.py  loader.py  samplers.py  tokenizer.py
data/preprocessing/: __init__.py  manifest.py  options.py  pipeline.py  shard_reader.py  storage.py  tokenization.py
data/symbolic/: detokenizer.py  tokenizer.py  vocabulary.py
model/: Attention.py  Decoder.py  Encoder.py  Layers.py  Mask.py  RotaryEmbedding.py  T5.py
models/t5_pytorch/: __init__.py  config.py  layers.py  transformer.py
mt3_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: chunk_dataset.ipynb  data_analysis.ipynb
scripts/: __init__.py  cache_all_datasets.py  create_unified_index.py  dataloader_benchmark.py  estimate_tokenization_workers.py  generate_chunk_manifest.py  inspect_batch.py  inspect_pt_file.py  precompute_chunks.py  preprocess_maestro.py  preprocess_slakh.py  run_preprocessing_sweep.py  test_cache_dataloader.py  test_cache_integrity.py
tests/: __init__.py  test_audio_augment.py  test_audio_io.py  test_audio_spectrogram.py  test_chunk_manifest.py  test_chunk_shard_reader.py  test_dataset_index.py  test_evaluation.py  test_full_pipeline.py  test_layers.py  test_model_architecture.py  test_precompute_chunks.py  test_preprocessing_storage.py  test_preprocessing_timing.py  test_preprocessing_tokenization.py  test_symbolic_detokenizer.py  test_symbolic_tokenizer.py  test_symbolic_vocabulary.py  test_training.py  test_training_quick.py  test_training_script.py  test_vocabularies.py
tests/configs/: __init__.py  test_project_config.py
training/: evaluate_multitrack.py  schedulers.py  simple_inference.py  train.py  train_multitrack.py
